:wrench: Updating issues tracker url

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/polywit/polywit
 project_urls =
-  Issue Tracker = https://github.com/polywit/polywit
+  Issue Tracker = https://github.com/polywit/polywit/issues
 
 
 [options]
