:memo: Updated feature request template

--- a/.github/ISSUE_TEMPLATE/✨-feature-request.yaml
+++ b/.github/ISSUE_TEMPLATE/✨-feature-request.yaml
@@ -1,6 +1,6 @@
 name: "✨ Feature request"
 description: Suggest an idea for polywit
-title: "✨:  "
+title: "✨: FEATURE"
 labels: [enhancement]
 
 body:
