--- a/.github/ISSUE_TEMPLATE/🐛-bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/🐛-bug-report.yaml
@@ -1,6 +1,6 @@
-name: "\U0001F41B Bug report"
+name: "🐛 Bug report"
 description: Create a report to help us improve
-title: "\U0001F41B: BUG REPORT"
+title: "🐛: BUG REPORT"
 labels: [bug]
 
 body:
