--- a/setup.cfg
+++ b/setup.cfg
@@ -24,3 +24,15 @@ console_scripts =
 [options.packages.find]
 exclude =
     tests*
+
+[options.extras_require]
+networkx==2.8.7
+javalang==0.13.0
+
+[flake8]
+max-line-length = 120
+exclude =
+    .git,
+    __pycache__,
+    venv
+max-complexity = 10
