:wrench: Updated setup config

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,10 @@ project_urls =
 
 [options]
 packages=find:
+install_requires =
+    networkx>=2.8.7
+    javalang>=0.13.0
+python_requires = >=3.10
 include_package_data = True
 
 [options.package_data]
@@ -24,10 +28,6 @@ console_scripts =
 [options.packages.find]
 exclude =
     tests*
-
-[options.extras_require]
-networkx==2.8.7
-javalang==0.13.0
 
 [flake8]
 max-line-length = 120
