:heavy_plus_sign: Adding kopyt kotlin parser dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ packages=find:
 install_requires =
     networkx>=2.8.8
     javalang>=0.13.0
+    kopyt>=0.0.2
 python_requires = >=3.10
 include_package_data = True
 
