--- a/setup.cfg
+++ b/setup.cfg
@@ -16,11 +16,13 @@ install_requires =
     networkx>=2.8.8
     javalang>=0.13.0
     kopyt>=0.0.2
+    tabulate>=0.9.0
+    halo>=0.0.31
 python_requires = >=3.10
 include_package_data = True
 
 [options.package_data]
-* = *.java
+* = *.java, *.kt
 
 [options.entry_points]
 console_scripts =
